# code-editing-agent

./: .env.example  .gitignore  0_agent_no_memory.py  1_agent_basic.py  2_agent_tool.py  3_agent_tool_loop.py  4_agent_tool_extend.py  5_code_agent.py  README.md  pyproject.toml  secret-file.txt
agent_lib/: __init__.py  console.py  core.py  llm.py
docs/: secret-file.txt
tests/: test_agents.py  test_llm.py
